[gd_scene load_steps=11 format=3 uid="uid://dgolpul7ixkg5"]

[ext_resource type="Theme" uid="uid://vbf5mtnxgkqh" path="res://ui/fonts/dialogue.tres" id="1_6hs1l"]
[ext_resource type="Texture2D" uid="uid://cb77lq7vtgq3w" path="res://ui/crucial/portraits/alien-chew.tres" id="2_6hs1l"]
[ext_resource type="Script" uid="uid://vvec7oo2kdwu" path="res://ui/dialogue_panel.gd" id="2_fhdyl"]
[ext_resource type="Script" uid="uid://tf5u63bi7bwb" path="res://ui/speaker_avatar.gd" id="3_2iib1"]
[ext_resource type="Theme" uid="uid://cyb83xrb0wiig" path="res://ui/fonts/dialogue-title.tres" id="3_fhdyl"]

[sub_resource type="ImageTexture" id="ImageTexture_lbhrr"]

[sub_resource type="LabelSettings" id="LabelSettings_lbhrr"]
line_spacing = -6.0

[sub_resource type="Animation" id="Animation_fhdyl"]
resource_name = "hint_blink"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_nld1p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t7suw"]
_data = {
&"RESET": SubResource("Animation_nld1p"),
&"hint_blink": SubResource("Animation_fhdyl")
}

[node name="DialoguePanel" type="HBoxContainer"]
offset_top = 136.0
offset_right = 288.0
offset_bottom = 192.0
theme = ExtResource("1_6hs1l")
alignment = 1
script = ExtResource("2_fhdyl")
alien_avatar = ExtResource("2_6hs1l")

[node name="Background" type="Polygon2D" parent="."]
color = Color(0.114897, 0.114897, 0.114897, 1)
polygon = PackedVector2Array(0, 0, 288, 0, 288, 56, 0, 56)

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="SpeakerAvatar" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_6hs1l")
script = ExtResource("3_2iib1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SpeakerAvatar"]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("ImageTexture_lbhrr")

[node name="Spacer3" type="Control" parent="."]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="TextContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="HBoxContainer" parent="TextContainer"]
layout_mode = 2
theme = ExtResource("3_fhdyl")

[node name="SpeakerName" type="Label" parent="TextContainer/Title"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_fhdyl")
text = "GÂ¬ort"
clip_text = true
metadata/_edit_lock_ = true

[node name="TimeText" type="Label" parent="TextContainer/Title"]
layout_mode = 2
text = "--:--"

[node name="Content" type="HBoxContainer" parent="TextContainer"]
layout_mode = 2

[node name="Dialogue" type="Label" parent="TextContainer/Content"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Bring me... sustanance. Human. :D"
label_settings = SubResource("LabelSettings_lbhrr")
autowrap_mode = 2
text_overrun_behavior = 3

[node name="Hint" type="Label" parent="TextContainer/Content"]
layout_mode = 2
size_flags_vertical = 1
text = "[Z]"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HintAnimator" type="AnimationPlayer" parent="TextContainer/Content/Hint"]
libraries = {
&"": SubResource("AnimationLibrary_t7suw")
}
autoplay = "hint_blink"

[node name="HintTimer" type="Timer" parent="TextContainer/Content"]

[node name="Spacer2" type="Control" parent="."]
layout_mode = 2

[node name="TextTimer" type="Timer" parent="."]
one_shot = true
